--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: Sonar
 on:
     push:
         branches:
-            - main
+            - master
     pull_request:
         types: [opened, synchronize, reopened]
 jobs:
@@ -18,7 +18,7 @@ jobs:
             - name: Coverage
               run: npm run test:coverage
             - name: SonarCloud Scan
-              uses: SonarSource/sonarcloud-github-action@main
+              uses: SonarSource/sonarcloud-github-action@master
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
