--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,9 @@ sonar.projectName=JS
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+sonar.sources=./src
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=src/**/*.test.js
