--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,5 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.js
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
